--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
+    "predeploy": "npm audit && npm run migrate:production",
     "deploy": "git push heroku main"
   },
   "keywords": [],
@@ -23,6 +24,7 @@
     "knex": "^0.95.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "postgrator-cli": "^4.0.0",
     "uuid": "^8.3.2",
     "valid-url": "^1.0.9",
     "winston": "^3.3.3",
@@ -32,7 +34,6 @@
     "chai": "^4.3.3",
     "mocha": "^8.3.0",
     "nodemon": "^2.0.7",
-    "postgrator-cli": "^3.2.0",
     "supertest": "^6.1.3"
   }
 }
